syntax = "proto3";

option csharp_namespace = "GrpcService.Protos";

package ServerSteaming;

service ServerSteaming {
	rpc SendMessage (ServerSteamingMessageRequest) returns (stream ServerSteamingMessageReply);
}

message ServerSteamingMessageRequest {
	string name = 1;
}

message ServerSteamingMessageReply {
	string message = 1;
}